# dev-hiring-challenge

./:  entrypoint.sh  .credo.exs  .directory  .dockerignore  .env  .env.dev  .env.dev.example  .env.example  .env.local  .env.prod-sample  .env.prod.db-sample  .env.sample  .env_example  .eslintignore  .eslintrc  .example.client.env  .example.docker.env  .example.server.env  .flaskenv  .gitignore  .gitignore.txt  .gitmodules  .postcssrc.yml  .prettierrc  .rubocop.yml  .sample.development.env  .sample.production.env  ApiGutHubDB1.sql  AteliwareChallenge.csproj  AteliwareChallenge.sln  AteliwareGitHub.sln  AteliwareHub.sln  CONFIG.md  CriarBancoDados.sql  DBClasses.py  Database.py  DevHiringChallenge.App.sln  DevHiringChallenge.App.sln.DotSettings  Dockerfile  Dockerfile.build  (+110 more)
.circleci/: config.yml
.devcontainer/: devcontainer.json
.streamlit/: setup.sh
Andre-Luiz/: README.md
ApiGitHubCore/: ApiGitHubCore.sln
AteliwareChallenge-ChristianSilva/: AteliwareChallenge-ChristianSilva.sln
AteliwareChallenge.Tests/: App.config  AteliwareChallenge.Tests.csproj  IndexUnitTest.cs
AteliwareGitHub.Client/: AteliwareGitHub.Client.csproj  Program.cs  Startup.cs  _ViewImports.cshtml
AteliwareGitHub.Server/: AteliwareContext.cs  AteliwareGitHub.Server.csproj  Program.cs  Startup.cs
AteliwareGitHub.Shared/: GitRepoDTO.cs  LanguagesDTO.cs
AteliwareGitHub.Tests/: AteliwareGitHub.Tests.csproj  GitHubServiceFake.cs  TestLoadLanguages.cs
AteliwareHub.Domain/: AteliwareHub.Domain.csproj
AteliwareHub.Infra/: AteliwareHub.Infra.csproj
AteliwareHub.Web/: Program.cs  (+4 more)
(+13861 files in other folders)
